--- a/app/src/main/res/layout/activity_company.xml
+++ b/app/src/main/res/layout/activity_company.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.dfreeman.etaandroidmockexample.CompanyActivity">
+    tools:context="com.example.dfreeman.etaandroidmockexample.View.CompanyActivity">
 
     <TextView
         android:layout_width="wrap_content"
