--- a/app/src/main/res/layout/activity_route.xml
+++ b/app/src/main/res/layout/activity_route.xml
@@ -6,4 +6,10 @@
     android:layout_height="match_parent"
     tools:context="com.example.dfreeman.etaandroidmockexample.View.RouteActivity">
 
+    <TextView
+        android:id="@+id/test"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="default"/>
+
 </android.support.constraint.ConstraintLayout>
