added more front end for routeActivity

--- a/app/src/main/res/layout/activity_route.xml
+++ b/app/src/main/res/layout/activity_route.xml
@@ -6,4 +6,10 @@
     android:layout_height="match_parent"
     tools:context="com.example.dfreeman.etaandroidmockexample.View.RouteActivity">
 
+    <ListView
+        android:id="@+id/routes"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </ListView>
+
 </android.support.constraint.ConstraintLayout>
